data/derived/sp14/progs/unify/prog4914.ml.out
Characters 9-11:
  let _ = (1. p);;
           ^^
Error: This expression has type float
       This is not a function; it cannot be applied.
